# sql_ai_writer

./: .gitignore  README.md  docker-compose.yml  generate_tables_description_1.txt  generate_tables_description_2.txt  pyproject.toml
src/: main.py
src/utils/: db_utils.py  embeddings_manager.py  llm_requests.py  logger.py
test_database_dump/: restore.sql
