[tool.poetry]
name = "sql-ai-writer"
version = "0.1.0"
description = ""
authors = ["Vlad Stukov <vladst90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
