[tool.poetry]
name = "sql-ai-writer"
version = "0.1.0"
description = ""
authors = ["Vlad Stukov <vladst90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.1.8"
chromadb = "^0.4.24"
colorlog = "^6.8.2"
langchain = "^0.1.16"
langchain-community = "^0.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
